dataset1235/2025-2/610742602/users/4074228937/executions/677928262_2383239197.log
== SUBMISSION (2025-08-23 23:53:29)
-- CODE: 
import math

x = float(input("Insira a distância de A: "))
y = float(input("Insira a distância de B: "))
z = float(input("Insira o valor do ângulo entre A e B: "))

g = math.radians(z)
j = math.sqrt(x**2+y**2-2*x*y*(math.cos(g)) )

print(round(j,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Insira a distância de A: Insira a distância de B: Insira o valor do ângulo entre A e B: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Insira a distância de A: Insira a distância de B: Insira o valor do ângulo entre A e B: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Insira a distância de A: Insira a distância de B: Insira o valor do ângulo entre A e B: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Insira a distância de A: Insira a distância de B: Insira o valor do ângulo entre A e B: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Insira a distância de A: Insira a distância de B: Insira o valor do ângulo entre A e B: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Insira a distância de A: Insira a distância de B: Insira o valor do ângulo entre A e B: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:43:42)
-- CODE: 
import math

x = float(input("Insira a distância de A: "))
y = float(input("Insira a distância de B: "))
z = float(input("Insira o valor do ângulo entre A e B: "))

j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )

print(j)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )
                                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )
                                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )
                                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )
                                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )
                                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = math.sqrt(x**2+y**2-2*x*y*(radians(z)) )
                                   ^^^^^^^
NameError: name 'radians' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 23:42:34)
-- CODE: 
import math

x = float(input("Insira a distância de A: "))
y = float(input("Insira a distância de B: "))
z = float(input("Insira o valor do ângulo entre A e B: "))

g = radians(z)

j = math.sqrt(x**2+y**2-2*x*y*g )

print(j)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 23:42:39)
-- CODE: 
import math

x = float(input("Insira a distância de A: "))
y = float(input("Insira a distância de B: "))
z = float(input("Insira o valor do ângulo entre A e B: "))

g = radians(z)

j = math.sqrt(x**2+y**2-2*x*y*g )

print(j)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g = radians(z)
        ^^^^^^^
NameError: name 'radians' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
